# poetry-test-package

tests/: test_cli.py
weather/: pyproject.toml
weather/weather/: cli.py
