[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Markiyan Pyts <markiyan.pyts@osf.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather.cli:cli"